fixed overflow

--- a/css/site.css
+++ b/css/site.css
@@ -1,12 +1,16 @@
-/* site.css */
 html, body { 
 	height:100%;
-	/* padding-bottom:70px; */
 	padding-bottom:30.2px;
 	font: 10pt "Helvetica Neue", Arial, Helvetica, sans-serif;
-/*	overflow-y: scroll;*/
 }
-
+body{
+    overflow-y: scroll;
+}
+#map{
+    min-height:350px;
+    width: 100%;
+    position: relative;
+}
 .SumoSelect{
 	width:240px;
 }
@@ -116,11 +120,7 @@ html, body {
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
 }
-#map{
-    min-height:450px;
-    width: 100%;
-    position: relative;
-}
+
 #toggleSettings{
     font-size: 11px;
 }
